--- a/_config.yml
+++ b/_config.yml
@@ -14,35 +14,35 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: "Wambua Mutuku" # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: " software developer | Cybersecurity analyst | Security Manager | Pen tester " # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+My journey and projects in Software development, cybersecurity, Security management
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://wambuamutuku.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: wambuamutuku # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: WAMBUAM55211181 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Wambua Mutuku (Dollahr)
+  email: mutukuwambua400@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/wambuamutuku # change to your Twitter homepage
+    - https://github.com/WAMBUAM55211181 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+     - https://www.linkedin.com/in/wambua-mutuku-10b30b229
 
 # Site Verification Settings
 webmaster_verifications:
