--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,9 @@ timezone:
 
 title: "Wambua Mutuku" # the main title
 
-tagline: " software developer | Cybersecurity analyst | Security Manager | Pen tester " # it will display as the subtitle
+tagline:  software developer | Cybersecurity analyst | Security Manager | Pen tester  # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
-"My journey and projects in Software development, cybersecurity, Security management"
+description:  "My journey and projects in Software development, cybersecurity, Security management"
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
